--- a/IOTAGRI/WebContent/WEB-INF/web.xml
+++ b/IOTAGRI/WebContent/WEB-INF/web.xml
@@ -25,5 +25,12 @@
 		<servlet-name>viewData</servlet-name>
 		<url-pattern>/viewData</url-pattern>
 	</servlet-mapping>
-	
+<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
 </web-app>
